<resources>
    <string name="app_name">MyMoneyTracker</string>
    <string name="app_title">MyMoneyTracker App</string>

    <!-- Menu-->
    <string name="menu_currency">Currency Rates</string>
    <string name="menu_statement">Statements</string>
    <string name="menu_transaction">Add Transaction</string>
    <string name="menu_category">Add Category</string>
    <string name="menu_settings">Settings</string>

    <!-- Add transaction page-->
    <string name="radio_income">Income</string>
    <string name="radio_expense">Expense</string>
    <string name="radio_usd">US Dolar</string>
    <string name="radio_cad">Canadian Dolar</string>
    <string name="radio_brl">Brazilian Real</string>
    <string name="radio_inr">Indian Rupee</string>
    <string name="radio_cny">Chinese Yuan</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="currency_value">Current rate value</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>