<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyRatesActivity">



    <LinearLayout
        android:id="@+id/layoutCurrencyRates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">


        <LinearLayout
            android:id="@+id/layoutCurrenciesTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvCurrencyConverterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="18dp"
                android:paddingBottom="10dp"
                android:text="@string/currency_converter" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCurrencyFromTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Currency From:" />
                <TextView
                    android:id="@+id/tvCurrencyToTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Currency To:" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tvCurrencies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/rBtnCurrencyFromGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="0dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rBtnFromUSD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_usd"
                        android:onClick="ChangeCurrencyFrom"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnFromCAD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_cad"
                        android:onClick="ChangeCurrencyFrom"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnFromBRL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_brl"
                        android:onClick="ChangeCurrencyFrom"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnFromINR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_inr"
                        android:onClick="ChangeCurrencyFrom"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnFromCNY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_cny"
                        android:onClick="ChangeCurrencyFrom"
                        android:textSize="16dp" />

                </RadioGroup>
                <RadioGroup
                    android:id="@+id/rBtnCurrencyToGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="0dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rBtnToUSD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_usd"
                        android:onClick="ChangeCurrencyTo"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnToCAD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_cad"
                        android:onClick="ChangeCurrencyTo"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnToBRL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_brl"
                        android:onClick="ChangeCurrencyTo"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnToINR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_inr"
                        android:onClick="ChangeCurrencyTo"
                        android:textSize="16dp" />
                    <RadioButton
                        android:id="@+id/rBtnToCNY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/radio_cny"
                        android:onClick="ChangeCurrencyTo"
                        android:textSize="16dp" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCurrencyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvCurrencyRateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/currency_value" />

            <TextView
                android:id="@+id/tvCurrencyRateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:text="Value" />

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>